# goit-pyweb-hw-07

./: README.md  alembic.ini  main.py  models.py  pyproject.toml  runSQL.py  seed.py  university.db
alembic/versions/: 36fb15dbf7da_initial_migration.py
